force-app/main/default/objects/MUSW__Account_Contact__c/MUSW__Account_Contact__c.object-meta.xml
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <description>Junction object representing business associations</description>
    <label>Account Contact</label>
    <nameField>
        <displayFormat>ACX-{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>