force-app/main/default/objects/MUSW__Account_Contact__c/fields/MUSW__Account__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Account.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Contacts</relationshipLabel>
    <relationshipName>Account_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>