force-app/main/default/objects/MUSW__Account_Contact__c/fields/MUSW__BG_Account_Cart_Access__c.field-meta.xml
<CustomField>
    <fullName>MUSW__BG_Account_Cart_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if the contact has access to pay for the Account&apos;s Cart.</description>
    <inlineHelpText>Specify if the contact has access to pay for the Account&apos;s Cart.</inlineHelpText>
    <label>Account Cart Access</label>
    <type>Checkbox</type>
</CustomField>