force-app/main/default/objects/MUSW__Account_Contact__c/fields/MUSW__Contact__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Contact.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Related Accounts</relationshipLabel>
    <relationshipName>Account_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>